<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/favFragment"
        android:name="com.m3.foodplanner.FavFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_fav" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.m3.foodplanner.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.m3.foodplanner.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/userFragment"
        android:name="com.m3.foodplanner.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />
</navigation>