<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <ImageView
        android:id="@+id/background_image"
        android:layout_width="450dp"
        android:layout_height="0dp"
        android:layout_marginBottom="207dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/new_logo_svg"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/background_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/black_white"

        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/splash_text"
        app:layout_constraintStart_toStartOf="@+id/splash_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:text="@string/app_con_name"
        android:textColor="@color/splash"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />


    <TextView
        android:id="@+id/restToAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/bentonsans_bold"
        android:gravity="center"
        android:text="@string/reset_your_password_here"
        android:textColor="@color/black_white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image" />

    <EditText
        android:id="@+id/rest_email_edit_text"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="114dp"
        android:background="@drawable/edit_background"
        android:drawableLeft="@drawable/message_icon"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rest_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button

        android:id="@+id/rest_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/small_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="126dp"
        android:backgroundTint="@color/splash"
        android:gravity="center"
        android:text="@string/rest"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_your_email_to_reset_your_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rest_email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>

