<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <ImageView
        android:id="@+id/background_image"
        android:layout_width="450dp"
        android:layout_height="270dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/new_logo_svg"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/background_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/black_white"

        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/splash_text"
        app:layout_constraintStart_toStartOf="@+id/splash_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:text="@string/app_con_name"
        android:textColor="@color/splash"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/loginToAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="111dp"
        android:fontFamily="@font/bentonsans_bold"
        android:gravity="center"
        android:text="@string/login_to_your_account"
        android:textColor="@color/black_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image" />

    <EditText
        android:id="@+id/sign_in_email_edit_text"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:drawableLeft="@drawable/message_icon"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToAccount" />

    <EditText
        android:id="@+id/sign_in_password_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_background"
        android:drawableLeft="@drawable/lock_ic"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:paddingStart="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/sign_in_email_edit_text"
        app:layout_constraintStart_toStartOf="@id/sign_in_email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email_edit_text" />

    <TextView
        android:id="@+id/continueWith"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:paddingStart="15dp"
        android:text="@string/or_continue_with"
        android:textColor="@color/black_white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/sign_in_password_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/sign_in_password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password_edit_text" />

    <TextView
        android:id="@+id/loginWithFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/facebook"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:text="Facebook"
        android:textColor="@color/black_white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueWith" />

    <TextView
        android:id="@+id/loginWithGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="25dp"
        android:drawableLeft="@drawable/google"
        android:drawablePadding="10dp"
        android:paddingEnd="15dp"
        android:text="Google"
        android:textColor="@color/black_white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginWithFacebook"
        app:layout_constraintTop_toBottomOf="@+id/continueWith" />

    <Button

        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/small_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/splash"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/to_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/forget_password"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="@+id/forget_password"
        app:layout_constraintTop_toBottomOf="@+id/forget_password" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textColor="@color/splash"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginWithGoogle"
        app:layout_constraintStart_toStartOf="@+id/loginWithFacebook"
        app:layout_constraintTop_toBottomOf="@+id/loginWithFacebook" />

    <TextView
        android:id="@+id/to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/splash"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>

