<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/on2" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/splash_small"
        android:fontFamily="@font/bentonsans_bold"
        android:lineHeight="30dp"
        android:text="@string/onB2"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/onB2_2"
        android:textSize="12sp" />

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/next_two_btn"
        android:backgroundTint="@color/splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/small_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/next"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="600dp"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"



        app:layout_constraintTop_toBottomOf="@+id/image"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/dot_pattern_animation" />

</RelativeLayout>
