<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="450dp"
        android:layout_height="270dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/new_logo_svg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:text="@string/app_con_name"
        android:textColor="@color/splash"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/slogan"

        android:textColor="@color/black_white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/splash_text"
        app:layout_constraintStart_toStartOf="@+id/splash_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/loginToAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="38dp"
        android:fontFamily="@font/bentonsans_bold"
        android:gravity="center"
        android:text="@string/sign_up_for_free"
        android:textColor="@color/black_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_username_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image" />

    <EditText
        android:id="@+id/sign_up_email_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_background"
        android:drawableLeft="@drawable/message_icon"

        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_username_edit_text" />

    <EditText
        android:id="@+id/sign_up_password_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPassword"

        android:background="@drawable/edit_background"
        android:drawableLeft="@drawable/lock_ic"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:paddingStart="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_edit_text" />

    <EditText
        android:id="@+id/sign_up_username_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_background"
        android:drawableLeft="@drawable/profile"
        android:drawablePadding="8dp"

        android:fontFamily="sans-serif-light"
        android:hint="@string/user_name"
        android:paddingStart="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToAccount" />

    <Button

        android:id="@+id/signup_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/small_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/splash"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/to_sign_in_txt"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_edit_text" />

    <TextView
        android:id="@+id/to_sign_in_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="already have an account?"
        android:textColor="@color/splash"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signup_btn"
        app:layout_constraintStart_toStartOf="@+id/signup_btn"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>