<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".calender.view.CalendarFragment">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/saturday_week_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:elevation="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="saturday"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:rippleColor="#3EAC70" />

            <Button
                android:id="@+id/sunday_week_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:elevation="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/sunday"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:rippleColor="#3EAC70" />

            <Button
                android:id="@+id/monday_week"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:elevation="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/monday"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:rippleColor="#3EAC70" />

            <Button
                android:id="@+id/tuesday_week"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:elevation="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="tuesday"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:rippleColor="#3EAC70" />

            <Button
                android:id="@+id/wednesday_week"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="wednesday"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:rippleColor="#3EAC70" />

            <Button
                android:id="@+id/thursday_week"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/thursday"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:rippleColor="#3EAC70" />

            <Button
                android:id="@+id/friday_week"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="friday"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:rippleColor="#3EAC70" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/week_rec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>